@@ -11,9 +11,12 @@ Installation:
 - Unpack the package into "PLUGINS/SRC" directory
 - Make a symbolic link to this dxr3-plugin (ln -s vdr_dxr3_x.x.x dxr3)
 - Check FFMDIR and EM8300 in Makefile
-- Check path to microcode for dxr3 in Makefile:
+- Check extra settings in Makefile:
 	# where is the microcode for the dxr3 located?
 	DEFINES += -DMICROCODE=\"/usr/share/misc/em8300.uc\"
+
+	# where should we write our log?
+	DEFINES += -DLOGPATH=\"/video/\"	# note: path must end with /
 - Call "make plugins" in the VDR root directory
 - Make sure your DXR3 driver modules are loaded and ready to run
 - Start VDR with "vdr -Pdxr3"
